3S2/SoftDev/api-service/k8s/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: kn66010794
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/sdpx-assignment/api-service/app
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000 
          readinessProbe:
            httpGet:
              path: /getcode 
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      imagePullSecrets:
        - name: regcred 
---
apiVersion: v1
kind: Service
metadata:
  namespace: kn66010794
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kn66010794
  name: kn66010794-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/kn66010794(/|$)(.*)"
            backend:
              service:
                name: app
                port:
                  number: 8000
